--- a/l10n/de.json
+++ b/l10n/de.json
@@ -8,6 +8,7 @@
     "The “%s“ application would like permission to access your account" : "Die \"%s\"-Anwendung möchte die Genehmigung zum Zugriff auf dein Konto",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Die Anwendung erhält Zugriff auf Ihren Benutzernamen und die Erlaubnis, Ihre Dateien, Ordner und geteilten Inhalte zu verwalten.",
     "Authorize" : "Autorisieren",
+    "Switch users to continue" : "Benutzer wechseln, um fortzufahren",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Angelegte Clients",
     "No clients registered." : "Keine Clients angelegt.",
@@ -23,7 +24,6 @@
     "Authorized Applications" : "Autorisierte Anwendungen",
     "No applications authorized." : "Keine Anwendungen autorisiert.",
     "Switch user" : "Benutzer wechseln",
-    "You are logged in as %s but the application requested access for user %s." : "Du bist als %s angemeldet, die Anwendung benötigt aber Zugriff auf den Benutzer %s.",
-    "Switch users to continue" : "Benutzer wechseln, um fortzufahren"
+    "You are logged in as %s but the application requested access for user %s." : "Du bist als %s angemeldet, die Anwendung benötigt aber Zugriff auf den Benutzer %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
