--- a/l10n/fr.json
+++ b/l10n/fr.json
@@ -8,6 +8,7 @@
     "The “%s“ application would like permission to access your account" : "L'application \"%s\" souhaiterait l'autorisation d'accéder à votre compte",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "L'application accédera à votre nom d’utilisateur et sera autorisée à gérer vos fichiers, dossiers et partages.",
     "Authorize" : "Autoriser",
+    "Switch users to continue" : "Changer d'utilisateur pour continuer",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Clients enregistrés",
     "No clients registered." : "Aucun client enregistré.",
@@ -23,7 +24,6 @@
     "Authorized Applications" : "Applications autorisées",
     "No applications authorized." : "Aucune application autorisée.",
     "Switch user" : "Changer d'utilisateur",
-    "You are logged in as %s but the application requested access for user %s." : "Vous êtes connecté en tant que %s mais l'application nécessite l'accès de %s.",
-    "Switch users to continue" : "Changer d'utilisateur pour continuer"
+    "You are logged in as %s but the application requested access for user %s." : "Vous êtes connecté en tant que %s mais l'application nécessite l'accès de %s."
 },"pluralForm" :"nplurals=2; plural=(n > 1);"
 }
