--- a/l10n/ko.json
+++ b/l10n/ko.json
@@ -8,6 +8,7 @@
     "The “%s“ application would like permission to access your account" : "\"%s\" 앱에서 내 계정에 접근하려고 합니다",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "이 앱이 내 권한을 사용할 수 있으며, 파일, 폴더 및 공유를 관리할 수 있습니다.",
     "Authorize" : "인증",
+    "Switch users to continue" : "계속하려면 사용자 전환",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "등록된 클라이언트",
     "No clients registered." : "등록된 클라이언트가 없습니다.",
@@ -23,7 +24,6 @@
     "Authorized Applications" : "인증된 앱",
     "No applications authorized." : "인증된 앱이 없습니다.",
     "Switch user" : "사용자 전환",
-    "You are logged in as %s but the application requested access for user %s." : "%s 님으로 로그인되어 있지만 앱에서 %s 사용자 접근을 요청했습니다.",
-    "Switch users to continue" : "계속하려면 사용자 전환"
+    "You are logged in as %s but the application requested access for user %s." : "%s 님으로 로그인되어 있지만 앱에서 %s 사용자 접근을 요청했습니다."
 },"pluralForm" :"nplurals=1; plural=0;"
 }
