--- a/l10n/nb_NO.json
+++ b/l10n/nb_NO.json
@@ -8,6 +8,7 @@
     "The “%s“ application would like permission to access your account" : "Programmet \"%s\" ber om tilgangstillatelse til kontoen din. ",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Applikasjonen vil få tilgang til ditt brukernavn og vil kunne administrere filer, lokale mapper og delte mapper.",
     "Authorize" : "Autoriser",
+    "Switch users to continue" : "Bytt bruker for å fortsette",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Registrerte klienter",
     "No clients registered." : "Ingen klienter er registrert",
@@ -23,7 +24,6 @@
     "Authorized Applications" : "Autoriser applikasjon",
     "No applications authorized." : "Ingen applikasjoner er autorisert.",
     "Switch user" : "Bytt bruker",
-    "You are logged in as %s but the application requested access for user %s." : "Du er logget in som %smen applikasjonen forespurte tilgang for bruker %s.",
-    "Switch users to continue" : "Bytt bruker for å fortsette"
+    "You are logged in as %s but the application requested access for user %s." : "Du er logget in som %smen applikasjonen forespurte tilgang for bruker %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
