--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -6,6 +6,7 @@
     "This request is not valid. Please contact the administrator of “%s” if this error persists." : "Este pedido não é válido. Entre em contato com o administrador do \"%s\" se esse erro persistir.",
     "Back" : "Voltar",
     "The “%s“ application would like permission to access your account" : "O  aplicativo \"%s\" gostaria de permissão de acesso a sua conta",
+    "You are logged in as %s." : "Você está conectado como %s.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "O aplicativo ganhará acesso ao seu nome de usuário e terá permissão para gerenciar arquivos, pastas e compartilhamentos.",
     "Authorize" : "Autorizar ",
     "Switch users to continue" : "Mude os usuários para continuar",
