--- a/l10n/nl.json
+++ b/l10n/nl.json
@@ -1,9 +1,13 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "De applicatie \"{app}\" vraagt toegang tot je account. Om dit toe te staan, gelieve eerst aan te melden.",
+    "The application was authorized successfully. You can now close this window." : "De applicatie is geauthenticeerd. U kunt dit venster nu sluiten.",
     "Request not valid" : "Ongeldige aanvraag",
     "This request is not valid. Please contact the administrator if this error persists." : "De aanvraag is niet geldig. Neem contact op met de beheerder als de fout aanhoudt.",
+    "The “%s“ application would like permission to access your account" : "De applicatie \"%s\" verzoekt toestemming tot uw account",
+    "You are logged in as %s." : "U bent ingelogd als %s.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "De applicatie krijgt toegang tot je gebruikersnaam en mag bestanden, mappen en shares beheren.",
     "Authorize" : "Toestaan",
+    "Switch users to continue" : "Omschakelen gebruiker",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Geregistreerde clients",
     "No clients registered." : "Geen clients geregistreerd.",
@@ -12,12 +16,13 @@
     "Client Identifier" : "Client identificator",
     "Secret" : "Geheim",
     "Subdomains allowed" : "Sub-domeinen toegestaan",
-    "Are you sure you want to delete this item?" : "Weet je zeker dat je dit item wilt verwijderen?",
+    "Are you sure you want to delete this item?" : "Weet u zeker dat u dit item wilt verwijderen?",
     "Add client" : "Client toevoegen",
     "Allow subdomains" : "Toestaan sub-domeinen",
     "Add" : "Toevoegen",
     "Authorized Applications" : "Geautoriseerde applicaties",
     "No applications authorized." : "Geen applicaties geautoriseerd.",
-    "Switch user" : "Omschakelen gebruiker"
+    "Switch user" : "Omschakelen gebruiker",
+    "You are logged in as %s but the application requested access for user %s." : "U bent aangemeld als %s, maar de applicatie verzoekt toegang als %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
