[tx] updated from transifex

--- a/l10n/is.json
+++ b/l10n/is.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Forritið \"{app}\" er að biðja um aðgang að notandaaðganginum þínum. Til að heimila það þarftu fyrst að skrá þig inn.",
+    "Saving..." : "Er að vista ...",
     "The application was authorized successfully. You can now close this window." : "Það tókst að heimila forritið. Þú getur núna lokað þessum glugga.",
     "Request not valid" : "Beiðni ekki gild",
     "This request is not valid. Please contact the administrator if this error persists." : "Þessi beiðni er ógild. Hafðu samband við kerfisstjóra ef þessi villa kemur áfram upp.",
@@ -17,12 +18,12 @@
     "Client Identifier" : "Auðkenni biðlara",
     "Secret" : "Leynilykill",
     "Subdomains allowed" : "Undirlén leyfileg",
-    "Are you sure you want to delete this item?" : "Ertu viss um að þú viljir eyða þessu atriði?",
     "Add client" : "Bæta við biðlara",
     "Allow subdomains" : "Leyfa undirlén",
     "Add" : "Bæta við",
     "Authorized Applications" : "Heimiluð forrit",
     "No applications authorized." : "Engin forrit heimiluð.",
+    "Are you sure you want to delete this item?" : "Ertu viss um að þú viljir eyða þessu atriði?",
     "Switch user" : "Skipta um notanda",
     "You are logged in as %s but the application requested access for user %s." : "Þú ert skráð(ur) inn sem %s en forritið er að biðja um aðgang að notandanum %s."
 },"pluralForm" :"nplurals=2; plural=(n % 10 != 1 || n % 100 == 11);"
