--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Приложение \"{app}\" запрашивает доступ к вашей учётной записи. Чтобы авторизовать его, начала войдите.",
+    "Saving..." : "Сохранение...",
     "The application was authorized successfully. You can now close this window." : "Приложение было успешно авторизовано. Теперь вы можете закрыть это окно.",
     "Request not valid" : "Запрос недопустим",
     "This request is not valid. Please contact the administrator if this error persists." : "Запрос недопустим. Пожалуйста, свяжитесь с администратором, если эта ошибка остаётся.",
@@ -17,12 +18,12 @@
     "Client Identifier" : "Идентификатор клиента",
     "Secret" : "Секрет",
     "Subdomains allowed" : "Поддомэны разрешены",
-    "Are you sure you want to delete this item?" : "Вы действительно хотите это удалить?",
     "Add client" : "Добавить клиент",
     "Allow subdomains" : "Разрешить поддомены",
     "Add" : "Добавить",
     "Authorized Applications" : "Авторизованые приложения",
     "No applications authorized." : "Авторизованые приложения отсутствуют.",
+    "Are you sure you want to delete this item?" : "Вы действительно хотите это удалить?",
     "Switch user" : "Переключить пользователя",
     "You are logged in as %s but the application requested access for user %s." : "Вы вошли как %s, но приложение запросило доступ для пользователя %s."
 },"pluralForm" :"nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);"
