--- a/l10n/af_ZA.json
+++ b/l10n/af_ZA.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Die toepassing “{app}” versoek toegang tot u rekening. Teken aan om dit te magtig.",
+    "Saving..." : "Bewaar tans…",
     "The application was authorized successfully. You can now close this window." : "Die toepassing is suksesvol gemagtig. U kan hierdie venster nou sluit.",
     "Request not valid" : "Versoek is ongeldig",
     "This request is not valid. Please contact the administrator if this error persists." : "Hierdie versoek is ongeldig. Kontak die administrateur indien hierdie fout voortduur.",
@@ -16,12 +17,12 @@
     "Client Identifier" : "Kliëntidentifiseerder",
     "Secret" : "Geheim",
     "Subdomains allowed" : "Subdomeine toegestaan",
-    "Are you sure you want to delete this item?" : "Is u seker u wil hierdie item skrap?",
     "Add client" : "Voeg kliënt toe",
     "Allow subdomains" : "Staan subdomeine toe",
     "Add" : "Voeg by",
     "Authorized Applications" : "Gemagtigde Toepassings",
     "No applications authorized." : "Geen toepassings gemagtig.",
+    "Are you sure you want to delete this item?" : "Is u seker u wil hierdie item skrap?",
     "Switch user" : "Wissel gebruiker",
     "You are logged in as %s but the application requested access for user %s." : "U is as %s aangeteken maar die toepassing versoek toegang van gebruiker %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
