--- a/l10n/es.json
+++ b/l10n/es.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "La aplicación \"{app}\" requiere acceso a su cuenta. para autorizarla, logese primero.",
+    "Saving..." : "Guardando…",
     "The application was authorized successfully. You can now close this window." : "La aplicación ha sido autorizada,  ya puede cerrar esta ventana.",
     "Request not valid" : "Petición Inválida",
     "This request is not valid. Please contact the administrator if this error persists." : "Petición inválida. Por favor contacte con el administrador si el error persiste.",
@@ -17,12 +18,12 @@
     "Client Identifier" : "Identificador del cliente",
     "Secret" : "Secreto",
     "Subdomains allowed" : "Subdominios permitidos",
-    "Are you sure you want to delete this item?" : "¿Confirma que quiere eliminar este elemento?",
     "Add client" : "Añadir cliente",
     "Allow subdomains" : "Permitir subdominios",
     "Add" : "Añadir",
     "Authorized Applications" : "Aplicaciones autorizadas",
     "No applications authorized." : "No hay aplicaciones autorizadas.",
+    "Are you sure you want to delete this item?" : "¿Confirma que quiere eliminar este elemento?",
     "Switch user" : "Cambiar de usuario",
     "You are logged in as %s but the application requested access for user %s." : "Se ha logado como %s pero la aplicación pide acceso del usuario %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
