--- a/l10n/eu.json
+++ b/l10n/eu.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "\"{app}\" aplikazioak zure kontura atzipena eskatzen ari da. Baimena emateko saio hasi mesedez.",
+    "Saving..." : "Gordetzen...",
     "The application was authorized successfully. You can now close this window." : "Aplikazioa baimendua izan da. Leiho hau itxi dezakezu.",
     "Request not valid" : "Eskakizun baliogabea",
     "This request is not valid. Please contact the administrator if this error persists." : "Eskakizun hau baliogabea da. Erroreak badirau, kudeatzailearekin harremanetan jarri mesedez.",
@@ -17,12 +18,12 @@
     "Client Identifier" : "Bezeroaren identifikadorea",
     "Secret" : "Sekretua",
     "Subdomains allowed" : "Azpidomeinuak onartuta",
-    "Are you sure you want to delete this item?" : "Ziur elementu hau ezabatu nahi duzula?",
     "Add client" : "Bezeroa gehitu",
     "Allow subdomains" : "Azpidomeinuak onartu",
     "Add" : "Gehitu",
     "Authorized Applications" : "Baimendutako Aplikazioak",
     "No applications authorized." : "Ez da baimendutako aplikaziorik.",
+    "Are you sure you want to delete this item?" : "Ziur elementu hau ezabatu nahi duzula?",
     "Switch user" : "Erabiltzailea aldatu",
     "You are logged in as %s but the application requested access for user %s." : "%s bezala hasi duzu saioa baina aplikazioak %s erabiltzailearentzat eskatzen du atzipena."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
