--- a/l10n/he.json
+++ b/l10n/he.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "היישום \"{app}\" מבקש גישה לחשבון שלך. לאישור, יש להתחבר תחילה.",
+    "Saving..." : "שמירה…",
     "The application was authorized successfully. You can now close this window." : "היישום אושר בהצלחה. ניתן לסגור עכשיו את החלון.",
     "Request not valid" : "הבקשה אינה חוקית",
     "This request is not valid. Please contact the administrator if this error persists." : "הבקשה אינה חוקית. יש ליצור קשר עם מנהל המערכת אם שגיאה זו תמשך.",
@@ -17,12 +18,12 @@
     "Client Identifier" : "מזהה לקוח",
     "Secret" : "סוד",
     "Subdomains allowed" : "תיקיות משנה מאופשרות",
-    "Are you sure you want to delete this item?" : "האם באמת למחוק פריט זה?",
     "Add client" : "הוספת לקוח",
     "Allow subdomains" : "לאפשר תיקיות משנה",
     "Add" : "הוספה",
     "Authorized Applications" : "הרשאת יישום",
     "No applications authorized." : "אין יישומים מאושרים.",
+    "Are you sure you want to delete this item?" : "האם באמת למחוק פריט זה?",
     "Switch user" : "החלפת משתמש",
     "You are logged in as %s but the application requested access for user %s." : "הנך מחובר כ-  %s אבל היישום מבקש הרשאת גישה עבור משתמש %s."
 },"pluralForm" :"nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;"
