--- a/l10n/nn_NO.json
+++ b/l10n/nn_NO.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Programmet \"{app}\" spør om tilgang til din konto. Ver venleg å logge inn for å godkjenne tilgang.",
+    "Saving..." : "Lagrar …",
     "The application was authorized successfully. You can now close this window." : "Programmet er godkjend for tilgang. Du kan stenge dette vindauget.",
     "Request not valid" : "Førespurnad er ikkje gyldig",
     "This request is not valid. Please contact the administrator if this error persists." : "Førespurnad er ikkje gyldig. Ver venleg å kontakte administrator om feilen oppstår att.",
@@ -16,12 +17,12 @@
     "Client Identifier" : "Klient identifikator",
     "Secret" : "Hemmeleg",
     "Subdomains allowed" : "Under domene tillatt",
-    "Are you sure you want to delete this item?" : "Er du sikker på at du vil slette dette?",
     "Add client" : "Legg til klient",
     "Allow subdomains" : "Tillat under domene",
     "Add" : "Legg til",
     "Authorized Applications" : "Autoriserte applikasjonar",
     "No applications authorized." : "Ingen applikasjonar er autorisert",
+    "Are you sure you want to delete this item?" : "Er du sikker på at du vil slette dette?",
     "Switch user" : "Bytt brukar",
     "You are logged in as %s but the application requested access for user %s." : "Du er logga inn som %s men programmet ynskjer tilgang for brukar %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
