--- a/l10n/ko.json
+++ b/l10n/ko.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "\"{app}\" 앱에서 내 계정에 접근하려고 합니다. 인증하려면 먼저 로그인하십시오.",
+    "Saving..." : "저장 중...",
     "The application was authorized successfully. You can now close this window." : "앱을 인증했습니다. 이 창을 닫아도 됩니다.",
     "Request not valid" : "요청이 올바르지 않음",
     "This request is not valid. Please contact the administrator if this error persists." : "이 요청이 올바르지 않습니다. 오류가 계속 발생하면 관리자에게 연락하십시오.",
