--- a/l10n/nl.json
+++ b/l10n/nl.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "De applicatie \"{app}\" vraagt toegang tot je account. Om dit toe te staan, gelieve eerst aan te melden.",
+    "Saving..." : "Opslaan",
     "The application was authorized successfully. You can now close this window." : "De applicatie is geauthenticeerd. U kunt dit venster nu sluiten.",
     "Request not valid" : "Ongeldige aanvraag",
     "This request is not valid. Please contact the administrator if this error persists." : "De aanvraag is niet geldig. Neem contact op met de beheerder als de fout aanhoudt.",
