--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -1,6 +1,12 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "O aplicativo \"{app}\" está solicitando acesso à sua conta. Para autorizá-lo, faça o login primeiro.",
+    "Deleting..." : "Excluindo...",
     "Saving..." : "Salvando...",
+    "Name must not be empty" : "O nome não deve estar vazio",
+    "Redirect URI must not be empty" : "O URI de redirecionamento não deve estar vazio",
+    "Redirect URI must be a valid URL" : "O URI de redirecionamento deve ser um URL válido",
+    "Name %s already exists" : "O nome %s já existe",
+    "Client id must be a number" : "O ID do cliente deve ser um número",
     "The application was authorized successfully. You can now close this window." : "O aplicativo foi autorizado com sucesso. Você já pode fechar esta janela.",
     "Request not valid" : "Pedido não válido",
     "This request is not valid. Please contact the administrator if this error persists." : "Este pedido não é válido. Entre em contato com o administrador se esse erro persistir.",
