[tx] updated from transifex

--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -1,6 +1,12 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Die Anwendung \"{app}\" erfordert den Zugriff auf Ihr Konto. Zur Genehmigung bitte erst anmelden.",
+    "Deleting..." : "Lösche...",
     "Saving..." : "Speichervorgang…",
+    "Name must not be empty" : "Name darf nicht leer sein",
+    "Redirect URI must not be empty" : "Umgeleitete URI darf nicht leer sein",
+    "Redirect URI must be a valid URL" : "Umgeleitete URI muss eine gültige URL sein",
+    "Name %s already exists" : "Name %s existiert bereits",
+    "Client id must be a number" : "Client ID muss eine Nummer sein",
     "The application was authorized successfully. You can now close this window." : "Die Anwendung wurde erfolgreich autorisiert. Sie können das Fenster nun schließen.",
     "Request not valid" : "Anfrage nicht gültig",
     "This request is not valid. Please contact the administrator if this error persists." : "Diese Anfrage ist nicht gültig. Bitte kontaktieren Sie den Administrator, wenn der Fehler weiterhin erscheint.",
