--- a/l10n/pl.json
+++ b/l10n/pl.json
@@ -1,26 +1,33 @@
 { "translations": {
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Aplikacja \"{app}\" żąda dostępu do Twojego konta. Zaloguj się aby ją potwierdzić.",
+    "Deleting..." : "Usuwanie...",
+    "Saving..." : "Zapisywanie...",
+    "Name must not be empty" : "Nazwa nie może być pusta",
+    "Redirect URI must not be empty" : "Adres URI przekierowania nie może być pusty",
+    "Redirect URI must be a valid URL" : "Adres URI przekierowania musi być prawidłowym adresem URL",
+    "Name %s already exists" : "Nazwa %s już istnieje",
+    "Client id must be a number" : "Client id musi być liczbą",
     "Request not valid" : "Nieprawidłowe żądanie",
     "This request is not valid. Please contact the administrator if this error persists." : "To żądanie jest nieprawidłowe. Skontaktuj się z administratorem, jeśli problem będzie się powtarzał.",
-    "This request is not valid. Please contact the administrator of “" : "To żądanie jest nieprawidłowe. Skontaktuj się z administratorem “",
-    "” if this error persists." : "” jeśli problem będzie się powtarzał.",
-    "Back" : "Wróć",
-    "Do you really like to authorize the application “" : "Uwierzytelnić aplikację „",
-    "”?" : "”?",
+    "You are logged in as %s." : "Jesteś zalogowany jako %s.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Aplikacja uzyska dostęp do nazwy użytkownika i będzie mogła zarządzać plikami, katalogami i współdzielonymi zasobami.",
     "Authorize" : "Uwierzytelnij",
-    "Cancel" : "Anuluj",
+    "Switch users to continue" : "Przełącz użytkowników aby kontynuować",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Zarejestrowani klienci",
     "No clients registered." : "Brak zarejestrowanych klientów",
     "Name" : "Nazwa",
+    "Redirection URI" : "Adres URI przekierowania",
     "Client Identifier" : "Identyfikator klienta",
     "Secret" : "Hasło",
     "Subdomains allowed" : "Subdomeny dopuszczone",
-    "Are you sure you want to delete this item?" : "Usunąć ten element?",
     "Add client" : "Dodaj klienta",
     "Allow subdomains" : "Dopuść subdomeny",
     "Add" : "Dodaj",
     "Authorized Applications" : "Uwierzytelnione aplikacje",
-    "No applications authorized." : "Brak uwierzytelnionych aplikacji"
+    "No applications authorized." : "Brak uwierzytelnionych aplikacji",
+    "Are you sure you want to delete this item?" : "Usunąć ten element?",
+    "Switch user" : "Przełącz użytkownika",
+    "You are logged in as %s but the application requested access for user %s." : "Jesteś zalogowany jako %s ale aplikacja wymaga dostępu dla użytkownika %s."
 },"pluralForm" :"nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);"
 }
