[tx] updated from transifex

--- a/l10n/ja.json
+++ b/l10n/ja.json
@@ -4,8 +4,12 @@
     "Name must not be empty" : "名前は空にできません",
     "Redirect URI must not be empty" : "リダイレクトURIは空にできません",
     "Redirect URI must be a valid URL" : "リダイレクトURIは有効なURLである必要があります",
+    "Name %s already exists" : "%sはすでに存在する名前です",
     "Client id must be a number" : "クライアントidは数字である必要があります",
+    "The application was authorized successfully. You can now close this window." : "アプリケーションの認証に成功しました。このウインドウは閉じることができます。",
     "Request not valid" : "リクエストは無効です",
+    "This request is not valid. Please contact the administrator if this error persists." : "不正なリクエストです。繰り返しエラーが表示される場合は管理者に問い合わせてください。",
+    "This request is not valid. Please contact the administrator of “%s” if this error persists." : "不正なリクエストです。繰り返しエラーが表示される場合は%sの管理者に問い合わせてください。",
     "You are logged in as %s." : "%sとしてログインしました。",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "アプリケーションがあなたのユーザー名に対してアクセスを得れば、ファイル、フォルダー、共有を管理できるようになります。",
     "Authorize" : "許可",
