--- a/l10n/gl.json
+++ b/l10n/gl.json
@@ -22,7 +22,7 @@
     "Name" : "Nome",
     "Redirection URI" : "URI de redireccionamento",
     "Client Identifier" : "Identificador do cliente",
-    "Secret" : "Secreto",
+    "Secret" : "Segredo",
     "Subdomains allowed" : "Subdominios permitidos",
     "Add client" : "Engadir cliente",
     "Allow subdomains" : "Permitir subdominios",
