--- a/l10n/el.json
+++ b/l10n/el.json
@@ -1,5 +1,6 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Η εφαρμογή \"{app}\" ζητά πρόσβαση στον λογαριασμό σας. Για να την εξουσιοδοτήσετε, παρακαλούμε πρώτα συνδεθείτε.",
+    "Deleting..." : "Γίνεται διαγραφή...",
     "Saving..." : "Γίνεται αποθήκευση...",
     "The application was authorized successfully. You can now close this window." : "Η εφαρμογή εγκρίθηκε με επιτυχία. Τώρα μπορείτε να κλείσετε αυτό το παράθυρο.",
     "Request not valid" : "Μη έγκυρη αίτηση",
