--- a/l10n/zh_TW.json
+++ b/l10n/zh_TW.json
@@ -1,22 +1,30 @@
 { "translations": {
-    "Back" : "返回",
-    "Do you really like to authorize the application “" : "您真的想要驗證應用程式嗎 “",
-    "”?" : "”?",
+    "Deleting..." : "刪除中...",
+    "Saving..." : "儲存中...",
+    "Name must not be empty" : "名稱不能為空",
+    "Redirect URI must not be empty" : "重定向URI不能為空",
+    "Client id must be a number" : "客戶端編號必須是數字",
+    "The application was authorized successfully. You can now close this window." : "該應用程式已成功授權。 您現在可以關閉此窗口。",
+    "Request not valid" : "要求無效",
+    "This request is not valid. Please contact the administrator if this error persists." : "此請求無效。如果此錯誤仍然存在，請與管理員聯繫。",
+    "You are logged in as %s." : "您登錄為%s。",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "此應用程式將會得到您的帳號存取和允許管理檔案，資料夾和分享。",
     "Authorize" : "驗證",
-    "Cancel" : "取消",
+    "Switch users to continue" : "切換用戶以繼續",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "已註冊用戶",
     "No clients registered." : "沒有用戶註冊。",
     "Name" : "名稱",
+    "Redirection URI" : "URI重定向",
     "Client Identifier" : "用戶身份",
     "Secret" : "密鑰",
     "Subdomains allowed" : "子網域已允許",
-    "Are you sure you want to delete this item?" : "您確定要刪除這個項目嗎?",
     "Add client" : "新增用戶",
     "Allow subdomains" : "允許子網域",
     "Add" : "增加",
     "Authorized Applications" : "驗證應用程式",
-    "No applications authorized." : "沒有應用程式已驗證。"
+    "No applications authorized." : "沒有應用程式已驗證。",
+    "Are you sure you want to delete this item?" : "您確定要刪除這個項目嗎?",
+    "Switch user" : "開關使用者"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
