--- a/l10n/zh_TW.json
+++ b/l10n/zh_TW.json
@@ -1,4 +1,5 @@
 { "translations": {
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "應用程式“ {app}”正在請求訪問您的帳號。 要對其進行授權，請先登入。",
     "Deleting..." : "刪除中...",
     "Saving..." : "儲存中...",
     "Name must not be empty" : "名稱不能為空",
@@ -9,6 +10,8 @@
     "The application was authorized successfully. You can now close this window." : "該應用程式已成功授權。 您現在可以關閉此窗口。",
     "Request not valid" : "要求無效",
     "This request is not valid. Please contact the administrator if this error persists." : "此請求無效。如果此錯誤仍然存在，請與管理員聯繫。",
+    "This request is not valid. Please contact the administrator of “%s” if this error persists." : "此請求無效。 請聯繫管理員“%s”如果此錯誤仍然存在。",
+    "The “%s“ application would like permission to access your account" : "的“%s”應用程式想要訪問您的帳號的權限",
     "You are logged in as %s." : "您登錄為%s。",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "此應用程式將會得到您的帳號存取和允許管理檔案，資料夾和分享。",
     "Authorize" : "驗證",
@@ -27,6 +30,7 @@
     "Authorized Applications" : "驗證應用程式",
     "No applications authorized." : "沒有應用程式已驗證。",
     "Are you sure you want to delete this item?" : "您確定要刪除這個項目嗎?",
-    "Switch user" : "開關使用者"
+    "Switch user" : "開關使用者",
+    "You are logged in as %s but the application requested access for user %s." : "您登錄為%s但應用程式請求使用者訪問%s。"
 },"pluralForm" :"nplurals=1; plural=0;"
 }
