--- a/l10n/hu_HU.json
+++ b/l10n/hu_HU.json
@@ -1,11 +1,18 @@
 { "translations": {
-    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "A (z) \"{app}\" alkalmazás hozzáférést kér fiókjához. Engedélyezéséhez jelentkezzen be először.",
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "\"{app}\" alkalmazás hozzáférést kér fiókjához. Engedélyezéséhez jelentkezzen be először.",
+    "Deleting..." : "Törlés...",
     "Saving..." : "Mentés...",
+    "Name must not be empty" : "A név nem lehet üres",
+    "Redirect URI must not be empty" : "Az átirányítási URI nem lehet üres",
+    "Redirect URI must be a valid URL" : "Az átirányítási URI érvényes URL kell legyen",
+    "Name %s already exists" : "%s név már létezik",
+    "Client id must be a number" : "Ügyfél id csak szám lehet",
     "The application was authorized successfully. You can now close this window." : "Az alkalmazás sikeresen engedélyezett. Most bezárhatja ezt az ablakot.",
     "Request not valid" : "Kérelem érvénytelen",
     "This request is not valid. Please contact the administrator if this error persists." : "Ez a kérés nem érvényes. Ha a hiba továbbra is fennáll, lépjen kapcsolatba a rendszergazdával.",
-    "This request is not valid. Please contact the administrator of “%s” if this error persists." : "Ez a kérés nem érvényes. Ha a hiba továbbra is fennáll, lépjen kapcsolatba a (z) \"%s\" rendszergazdájával.",
-    "The “%s“ application would like permission to access your account" : "A (z) \"%s\" alkalmazás engedélyt kér a fiók elérésére",
+    "This request is not valid. Please contact the administrator of “%s” if this error persists." : "Ez a kérés nem érvényes. Ha a hiba továbbra is fennáll, lépjen kapcsolatba \"%s\" rendszergazdájával.",
+    "The “%s“ application would like permission to access your account" : "\"%s\" alkalmazás engedélyt kér a fiók elérésére",
+    "You are logged in as %s." : "Belépve mint %s.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Az alkalmazás ezáltal hozzá fog férni a felhasználónevéhez, és engedélyt kap a fájlok, mappák és megosztások kezelésére.",
     "Authorize" : "Engedélyezés",
     "Switch users to continue" : "Kapcsolja át a felhasználókat a folytatáshoz",
@@ -24,6 +31,6 @@
     "No applications authorized." : "Nincs engedélyezett alkalmazás.",
     "Are you sure you want to delete this item?" : "Biztos benne, hogy törli ezt a tételt?",
     "Switch user" : "Felhasználó váltás",
-    "You are logged in as %s but the application requested access for user %s." : "%s-ként jelentkezett be, de az alkalmazás a (z)%s felhasználóhoz hozzáférést kért."
+    "You are logged in as %s but the application requested access for user %s." : "%s-ként jelentkezett be, de az alkalmazás %s felhasználóhoz hozzáférést kért."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
