[tx] updated from transifex

--- a/l10n/cs_CZ.json
+++ b/l10n/cs_CZ.json
@@ -1,9 +1,20 @@
 { "translations": {
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Aplikace \"{app}\" vyžaduje přístup k Vašemu účtu. K jejímu povolení se nejprve přihlaste.",
+    "Deleting..." : "Mažu...",
+    "Saving..." : "Ukládám...",
+    "Name must not be empty" : "Jméno nesmí být prázdné",
+    "Redirect URI must not be empty" : "Adresa přesměrování nesmí být prázdná",
+    "Redirect URI must be a valid URL" : "Adresa přesměrování musí být platnou URL adresou",
+    "Name %s already exists" : "Jméno %s již existuje",
+    "The application was authorized successfully. You can now close this window." : "Aplikace byla úspěšně autorizována. Můžete nyní zavřít toto okno.",
     "Request not valid" : "Neplatný požadavek",
     "This request is not valid. Please contact the administrator if this error persists." : "Neplatný požadavek. Prosím kontaktujte administrátora, pokud chyba přetrvává.",
-    "Back" : "Zpět",
+    "This request is not valid. Please contact the administrator of “%s” if this error persists." : "Neplatný požadavek. Prosím kontaktujte administrátora z \"%s\", pokud chyba přetrvává.",
+    "The “%s“ application would like permission to access your account" : "Aplikace \"%s\" vyžaduje přístup k Vašemu účtu",
+    "You are logged in as %s." : "Jste přihlášen jako %s.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Aplikace získá přístup vaším uživatelským jménem a bude moci spravovat soubory, složky a sdílení.",
     "Authorize" : "Povolit",
+    "Switch users to continue" : "Přepnout uživatele pro pokračování",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Registrovaní klienti",
     "No clients registered." : "Žádní registrovaní klienti.",
@@ -12,12 +23,13 @@
     "Client Identifier" : "Identifikátor klienta",
     "Secret" : "Tajemství",
     "Subdomains allowed" : "Subdomény povoleny",
-    "Are you sure you want to delete this item?" : "Jste si jistí, že chcete tyto položky smazat?",
     "Add client" : "Přidat klienta",
     "Allow subdomains" : "Povolené subdomény",
     "Add" : "Přidat",
     "Authorized Applications" : "Povolené aplikace",
     "No applications authorized." : "Žádné povolené aplikace",
-    "Switch user" : "Přepnout uživatele"
+    "Are you sure you want to delete this item?" : "Jste si jistí, že chcete tyto položky smazat?",
+    "Switch user" : "Přepnout uživatele",
+    "You are logged in as %s but the application requested access for user %s." : "Jste přihlášen jako %s ale aplikace je vyžaduje oprávnění uživatele %s."
 },"pluralForm" :"nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;"
 }
