[tx] updated from transifex

--- a/l10n/es.json
+++ b/l10n/es.json
@@ -1,5 +1,5 @@
 { "translations": {
-    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "La aplicación \"{app}\" requiere acceso a su cuenta. para autorizarla, logese primero.",
+    "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "La aplicación \"{app}\" requiere acceso a su cuenta. para autorizarla, inicie sesión primero.",
     "Deleting..." : "Eliminando...",
     "Saving..." : "Guardando…",
     "Name must not be empty" : "El nombre no puede estar vacío",
