[tx] updated from transifex

--- a/l10n/de_DE.json
+++ b/l10n/de_DE.json
@@ -12,7 +12,7 @@
     "This request is not valid. Please contact the administrator if this error persists." : "Diese Anfrage ist nicht gültig. Bitte kontaktieren Sie den Administrator, wenn der Fehler weiterhin erscheint.",
     "This request is not valid. Please contact the administrator of “%s” if this error persists." : "Diese Anfrage ist nicht gültig. Bitte kontaktieren Sie den Administrator von \"%s\", wenn der Fehler weiterhin erscheint.",
     "The “%s“ application would like permission to access your account" : "Die \"%s\"-Anwendung möchte die Genehmigung zum Zugriff auf Ihr Konto",
-    "You are logged in as %s." : "Du bist als %s angemeldet.",
+    "You are logged in as %s." : "Sie sind als Benutzer %s angemeldet.",
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "Die Anwendung erhält Zugriff auf Ihren Benutzernamen und die Erlaubnis, Ihre Dateien, Ordner und geteilten Inhalte zu verwalten.",
     "Authorize" : "Autorisieren",
     "Switch users to continue" : "Benutzer wechseln, um fortzufahren",
@@ -30,7 +30,7 @@
     "Authorized Applications" : "Autorisierte Anwendungen",
     "No applications authorized." : "Keine Anwendungen autorisiert.",
     "Are you sure you want to delete this item?" : "Möchten Sie das Objekt wirklich löschen?",
-    "Switch user" : "Nutzer wechseln",
+    "Switch user" : "Benutzer wechseln",
     "You are logged in as %s but the application requested access for user %s." : "Sie sind als %s angemeldet, die Anwendung benötigt aber Zugriff auf den Benutzer %s."
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
