--- a/l10n/pt_BR.json
+++ b/l10n/pt_BR.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "O URI de redirecionamento não deve estar vazio",
     "Redirect URI must be a valid URL" : "O URI de redirecionamento deve ser um URL válido",
     "Name %s already exists" : "O nome %s já existe",
+    "Cannot set localhost as trusted." : "Não é possível definir localhost como confiável.",
     "Client id must be a number" : "O ID do cliente deve ser um número",
     "The application was authorized successfully. You can now close this window." : "O aplicativo foi autorizado com sucesso. Você já pode fechar esta janela.",
     "Request not valid" : "Pedido não válido",
@@ -24,6 +25,7 @@
     "Client Identifier" : "Identificador do cliente",
     "Secret" : "Segredo",
     "Subdomains allowed" : "Subdomínios permitidos",
+    "Trusted client" : " \nCliente confiável",
     "Add client" : "Adicionar cliente",
     "Allow subdomains" : "Permitir subdomínios",
     "Add" : "Adicionar",
