[tx] updated from transifex

--- a/l10n/ru.json
+++ b/l10n/ru.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "Адрес для перенаправления не должен быть пустым",
     "Redirect URI must be a valid URL" : "Адрес для перенаправления должен быть допустимым URL",
     "Name %s already exists" : "Имя %s уже существует",
+    "Cannot set localhost as trusted." : "Нельзя установить в качестве доверенного localhost.",
     "Client id must be a number" : "Идентификатор клиента должен быть числом",
     "The application was authorized successfully. You can now close this window." : "Приложение было успешно авторизовано. Теперь вы можете закрыть это окно.",
     "Request not valid" : "Запрос недопустим",
@@ -24,6 +25,7 @@
     "Client Identifier" : "Идентификатор клиента",
     "Secret" : "Секрет",
     "Subdomains allowed" : "Поддомэны разрешены",
+    "Trusted client" : "Доверенный клиент",
     "Add client" : "Добавить клиент",
     "Allow subdomains" : "Разрешить поддомены",
     "Add" : "Добавить",
