[tx] updated from transifex

--- a/l10n/el.json
+++ b/l10n/el.json
@@ -2,6 +2,12 @@
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "Η εφαρμογή \"{app}\" ζητά πρόσβαση στον λογαριασμό σας. Για να την εξουσιοδοτήσετε, παρακαλούμε πρώτα συνδεθείτε.",
     "Deleting..." : "Γίνεται διαγραφή...",
     "Saving..." : "Γίνεται αποθήκευση...",
+    "Name must not be empty" : "Το όνομα δεν πρέπει να είναι κενό",
+    "Redirect URI must not be empty" : "Το URI ανακατεύθυνσης δεν πρέπει να είναι κενό",
+    "Redirect URI must be a valid URL" : "Το URI ανακατεύθυνσης πρέπει να είναι έγκυρο URL",
+    "Name %s already exists" : "Το όνομα %s υπάρχει ήδη",
+    "Cannot set localhost as trusted." : "Αδυναμία ορισμού localhost ως αξιόπιστου.",
+    "Client id must be a number" : "Το αναγνωριστικό πελάτη πρέπει να είναι αριθμός",
     "The application was authorized successfully. You can now close this window." : "Η εφαρμογή εγκρίθηκε με επιτυχία. Τώρα μπορείτε να κλείσετε αυτό το παράθυρο.",
     "Request not valid" : "Μη έγκυρη αίτηση",
     "This request is not valid. Please contact the administrator if this error persists." : "Μη έγκυρη αίτηση. Παρακαλούμε επικοινωνήστε με τον διαχειριστή εάν το σφάλμα επιμένει.",
@@ -19,6 +25,7 @@
     "Client Identifier" : "Αναγνωριστικό πελάτη",
     "Secret" : "Μυστικό",
     "Subdomains allowed" : "Επιτρέπονται υποτομείς",
+    "Trusted client" : "Αξιόπιστος πελάτης",
     "Add client" : "Προσθήκη πελάτη",
     "Allow subdomains" : "Να επιτρέπονται υποτομείς",
     "Add" : "Προσθήκη",
