--- a/l10n/th_TH.json
+++ b/l10n/th_TH.json
@@ -6,6 +6,7 @@
     "Redirect URI must not be empty" : "URL การเปลี่ยนเส้นทางจะต้องไม่ว่างเปล่า",
     "Redirect URI must be a valid URL" : "URL สำหรับเปลี่ยนเส้นทางไม่ถูกต้อง",
     "Name %s already exists" : "ชื่อ %s ถูกใช้แล้ว",
+    "Cannot set localhost as trusted." : "ไม่สามารถตั้งค่า localhost เป็น trusted",
     "Client id must be a number" : "รหัสไคลเอนต์จะต้องเป็นตัวเลข",
     "The application was authorized successfully. You can now close this window." : "แอปฯได้รับอนุญาตเรียบร้อยแล้ว ขณะนี้คุณสามารถปิดหน้าต่างนี้ได้เลย",
     "Request not valid" : "คำร้องขอไม่ถูกต้อง",
@@ -24,6 +25,7 @@
     "Client Identifier" : "รหัสประจำตัวไคลเอนต์",
     "Secret" : "ความลับ",
     "Subdomains allowed" : "โดเมนย่อยได้รับอนุญาตแล้ว",
+    "Trusted client" : "เชื่อถือไคลเอ็นต์แล้ว",
     "Add client" : "เพิ่มไคลเอนต์",
     "Allow subdomains" : "อนุญาตให้ใช้โดเมนย่อย",
     "Add" : "เพิ่ม",
