[tx] updated from transifex

--- a/l10n/sv.json
+++ b/l10n/sv.json
@@ -1,10 +1,15 @@
 { "translations": {
+    "Deleting..." : "Raderar...",
+    "Saving..." : "Sparar...",
+    "Name must not be empty" : "Namnet får inte vara tomt",
+    "Name %s already exists" : "Namnet %s finns redan",
+    "Cannot set localhost as trusted." : "Kan inte sätta localhost som betrodd.",
+    "Client id must be a number" : "Klient id måste vara ett nummer",
     "Request not valid" : "Förfrågan ej giltig",
     "This request is not valid. Please contact the administrator if this error persists." : "Förfrågningen är inte giltig. Var vänlig kontakta administratören om det här felet kvarstår.",
-    "Back" : "Tillbaka",
-    "”?" : "”?",
+    "You are logged in as %s." : "Du är inloggad som %s.",
     "Authorize" : "Autentisera",
-    "Cancel" : "Avbryt",
+    "Switch users to continue" : "Byt användare för att fortsätta",
     "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "Registrerade klienter",
     "No clients registered." : "Inga registrerade klienter",
@@ -13,11 +18,13 @@
     "Client Identifier" : "Klientidentifierare",
     "Secret" : "Hemlig",
     "Subdomains allowed" : "Subdomäner tillåtna",
-    "Are you sure you want to delete this item?" : "Vill du ta bort objektet?",
+    "Trusted client" : "Betrodd klient",
     "Add client" : "Lägg till klient",
     "Allow subdomains" : "Tillåt subdomäner",
     "Add" : "Lägg till",
     "Authorized Applications" : "Autentiserade applikationer",
-    "No applications authorized." : "Inga autentiserade applikationer."
+    "No applications authorized." : "Inga autentiserade applikationer.",
+    "Are you sure you want to delete this item?" : "Vill du ta bort objektet?",
+    "Switch user" : "Byt användare"
 },"pluralForm" :"nplurals=2; plural=(n != 1);"
 }
