--- a/l10n/zh_CN.json
+++ b/l10n/zh_CN.json
@@ -1,5 +1,13 @@
 { "translations": {
     "The application \"{app}\" is requesting access to your account. To authorize it, please log in first." : "应用程序“{app}”正在请求访问您的账户。请登录后授予其权限。",
+    "Deleting..." : "正在删除...",
+    "Saving..." : "保存中...",
+    "Name must not be empty" : "名称不能为空",
+    "Redirect URI must not be empty" : "名称不能为空",
+    "Redirect URI must be a valid URL" : "重定向 URI 必须是有效的 URL",
+    "Name %s already exists" : "名称%s已存在",
+    "Cannot set localhost as trusted." : "无法将 localhost 设置为受信任。",
+    "Client id must be a number" : "客户端 ID 必须是数字",
     "The application was authorized successfully. You can now close this window." : "应用程序已被成功授权。现在您可以关掉这个窗口了。",
     "Request not valid" : "无效的请求",
     "This request is not valid. Please contact the administrator if this error persists." : "该请求无效。如果此错误仍然存在，请联系管理员。",
@@ -9,17 +17,21 @@
     "The application will gain access to your username and will be allowed to manage files, folders and shares." : "该应用程序将访问您的用户名，并将被允许管理文件、文件夹和共享。",
     "Authorize" : "授权",
     "Switch users to continue" : "变更用户以继续",
+    "OAuth 2.0" : "OAuth 2.0",
     "Registered clients" : "已注册的客户端",
     "No clients registered." : "没有已注册的客户端",
     "Name" : "名称",
     "Redirection URI" : "重定向URI",
+    "Client Identifier" : "客户端标识符",
+    "Secret" : "密码",
     "Subdomains allowed" : "允许子域名",
-    "Are you sure you want to delete this item?" : "确定删除该项？",
+    "Trusted client" : "已信任的客户端",
     "Add client" : "增加客户端",
     "Allow subdomains" : "允许子域名",
     "Add" : "增加",
     "Authorized Applications" : "已授权的应用",
     "No applications authorized." : "没有被授权的应用。",
+    "Are you sure you want to delete this item?" : "确定删除该项？",
     "Switch user" : "切换用户",
     "You are logged in as %s but the application requested access for user %s." : "您已登录%s但是应用要求访问用户%s。"
 },"pluralForm" :"nplurals=1; plural=0;"
